--- a/src/index.css
+++ b/src/index.css
@@ -12,25 +12,56 @@ code {
     monospace;
 }
 
+div {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.notas-container {
+  background-color: #59AC77;
+  padding: 3rem;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px #5559;
+}
+
+h2 {
+  color: #FFD5D5;
+  margin-bottom: 60px;
+  font-size: 24px;
+  background-color: #3A6F43;
+  padding: 10px 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px #5559;
+}
+
 input {
   margin: 5px;
   padding: 8px;
-  border: 1px solid #ccc;
+  border: 1px solid #FFD5D5;
   border-radius: 4px;
   font-size: 16px;
   width: 200px;
   border-top: none;
   border-right: none;
-  drop-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: -5px 5px 5px #5559;
+  outline: none;
+  color: #3A6F43;
+}
+
+li {
+    list-style: none;
 }
 
 button {
   margin: 5px;
   padding: 10px 15px;
-  background-color: #28a745;
-  color: white;
+  background-color: #3A6F43;
+  color: #FFD5D5;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
+  box-shadow: 0 4px 8px #5559;
 }
